# TALISMAN

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  TALISMAN_GUIDE.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
chains/: api_audit.yaml  cloud_breach.yaml  full_recon.yaml  waf_bypass_probe.yaml  web_vuln_scan.yaml  windows_ad.yaml  wordpress_full.yaml
config/: default.yaml  inject_header.py  scope_banco_plata.yaml  scope_example.yaml
reports/: bounty-q1_report.html  bounty-q1_report.md
talisman/: __init__.py  cli.py
talisman/ai/: engine.py
talisman/engine/: monitor.py  orchestrator.py  plugin_manager.py  rate_limiter.py  scope.py  session.py
talisman/intelligence/: cve_feed.py  knowledge_base.py  scoring.py
talisman/modules/activedirectory/: ad_cs.py  ad_recon.py  azure_ad.py  kerberos.py  password_spray.py  smb_audit.py
talisman/modules/api/: graphql.py  grpc.py  jwt.py  oauth.py  swagger_audit.py
talisman/modules/cloud/: aws.py  azure.py  gcp.py  secrets.py
talisman/modules/cms/wordpress/: __init__.py  core.py  plugins.py  users.py  xmlrpc.py
talisman/modules/fuzzer/: param_fuzz.py  path_fuzz.py
talisman/modules/misconfiguration/: database_exposure.py  kubernetes_misconfig.py  nginx_misconfig.py  server_misconfig.py  spring_misconfig.py
talisman/modules/network/: email_security.py  ssl_tls.py  takeover.py
talisman/modules/recon/: dns.py  osint.py  param_miner.py  port_scanner.py  subdomain.py  tech_detect.py  web_crawler.py  whois_asn.py
talisman/modules/scanner/: auth.py  business_logic.py  cache_deception.py  cache_poison.py  cmdi.py  cors.py  crlf.py  csp_evaluator.py  csrf.py  dangling_markup.py  dep_confusion.py  deserialization.py  dom_clobbering.py  file_upload_scanner.py  git_exposure.py  headers.py  host_header.py  hpp.py  idor.py  ldap_injection.py  lfi_rfi.py  log4shell.py  mass_assignment.py  mfa_bypass.py  nosqli.py  nuclei_runner.py  open_redirect.py  parser_differential.py  prototype.py  race_condition.py  rate_limit.py  second_order.py  smuggling.py  sqli.py  ssji.py  sspp.py  ssrf.py  ssti.py  unicode_attacks.py  verb_tampering.py  (+3 more)
talisman/modules/waf/: ai_fuzz.py  bypass_engine.py  detector.py
talisman/modules/waf/vendors/: akamai.py  cloudflare.py
talisman/output/: report_engine.py
talisman/plugins/: base.py  loader.py
talisman/plugins/community/example_scanner/: plugin.yaml  scanner.py
talisman/utils/: diff.py  http_client.py  logger.py  oast.py  payload_engine.py
talisman/web/: __init__.py  dashboard.py
talisman_recon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: live_test_server.py
tests/integration/: test_scanners.py
tests/unit/: test_new_modules.py  test_payload_engine.py  test_plugin_manager.py  test_plugin_system.py  test_rate_limiter.py  test_scope.py  test_session.py
