[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talisman-recon"
version = "1.0.0"
description = "TALISMAN — Threat Analysis, Lateral Intelligence & Security Management for Advanced Networks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MR MARCUS TAYK" }]
keywords = ["security", "bugbounty", "pentest", "recon", "scanner"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "httpx[http2]>=0.27.0",
    "aiodns>=3.2.0",
    "dnspython>=2.6.0",
    "pyyaml>=6.0.1",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.4",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "tldextract>=5.1.0",
    "cryptography>=42.0.0",
    "pyjwt[crypto]>=2.8.0",
    "python-dateutil>=2.9.0",
    "click>=8.1.0",
    "anyio>=4.4.0",
    "certifi>=2024.2.2",
    "charset-normalizer>=3.3.0",
    "idna>=3.7",
    "packaging>=24.0",
    "psutil>=5.9.0",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "Levenshtein>=0.25.0",
    "mmh3>=4.1.0",
    "orjson>=3.10.0",
    "aiofiles>=23.2.0",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    "netaddr>=1.2.0",
    "urllib3>=2.2.0",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.28.0",
    "openai>=1.30.0",
]
cloud = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "google-cloud-storage>=2.16.0",
    "azure-storage-blob>=12.20.0",
    "azure-identity>=1.17.0",
]
browser = [
    "playwright>=1.44.0",
]
reports = [
    "weasyprint>=62.0",
    "markdown>=3.6",
    "pygments>=2.18.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
all = [
    "anthropic>=0.28.0",
    "openai>=1.30.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "google-cloud-storage>=2.16.0",
    "azure-storage-blob>=12.20.0",
    "azure-identity>=1.17.0",
    "playwright>=1.44.0",
    "weasyprint>=62.0",
    "markdown>=3.6",
    "pygments>=2.18.0",
]

[project.scripts]
talisman = "talisman.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["talisman*"]

[tool.setuptools.package-data]
talisman = ["py.typed", "chains/*.yaml", "config/*.yaml", "wordlists/*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests",
]
